스타벅스 페이지 만들기

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                   <a href="#">한눈에보기</a>
                 </li>
                 <li><a href="#">스타벅스 소개</a></li>
-                <li><a href="#">세계의 스타벅스스</a></li>
+                <li><a href="#">세계의 스타벅스</a></li>
               </ul>
               <ul>
                 <p class="footer_ttl">CORPORATE SALES</p>
