커피, 메뉴, 리워드, 신상품 페이지 추가

--- a/whatsnew.html
+++ b/whatsnew.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/components/nav.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/components/footer.css" />
     <title>스타벅스 만들어보기</title>
+    <link rel="stylesheet" href="./css/components/nav.css" />
+    <link rel="stylesheet" href="./css/components/footer.css" />
+    <link rel="stylesheet" href="./css/whatsnew.css" />
   </head>
   <body>
     <header>
       <div class="nav_bar">
-        <div class="main_logo">LOGO</div>
+        <a href="./index.html" class="main_logo">LOGO</a>
         <div class="nav_category">
           <div class="top_nav">
             <ul>
@@ -399,94 +399,90 @@
       </div>
     </header>
     <main>
-      <div class="scroll_backimg">
-        <div class="img_container">
-          <div class="season_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_01_230921.jpg"
-            />
+      <div class="whatsnew_mainttl">
+        <p>WHAT'S NEW</p>
+        <div>
+          <a href="./index.html"><i class="fa-solid fa-house"></i></a>
+          <i class="fa-solid fa-chevron-right"></i>
+          <a href="./coffee.html"><span>WHAT'S NEW</span></a>
+        </div>
+      </div>
+      <div>슬라이드?</div>
+      <div class="whatsnew_see_all">
+        <p>전체 보기</p>
+        <div class="btn_circle">
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+      </div>
+      <div class="release_usewebinfo">
+        <div class="release">
+          보도자료
+          <div>반복되는 자료 움직이는걸로</div>
+          <div class="btn_circle">
+            <i class="fa-solid fa-plus"></i>
           </div>
-          <div class="announce_promotion">
-            <div class="announce">
-              공지사항
-              <div>반복되는 공지 움직이는걸로</div>
-              <div class="btn_circle">
-                <i class="fa-solid fa-plus"></i>
-              </div>
-            </div>
-            <div class="promotion">
-              프로모션
-              <div class="btn_circle_black">
-                <i class="fa-solid fa-chevron-down"></i>
-              </div>
-            </div>
-          </div>
-          <div class="rewards_gift_card">
-            <div class="rewards_logoinfo">
-              <div class="rewards_logo">로고</div>
-              <div class="rewards_info">
-                <div class="rewards_info_top">
-                  <div class="rewards_info_top_txt">
-                    <p>
-                      스타벅스만의 특별한 혜택,
-                      <span class="txt_bold">스타벅스 리워드</span>
-                    </p>
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이세요?</span>
-                      로그인을 통해 나만의 리워드를 확인해보세요
-                    </p>
-
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이 아니세요?</span>
-                      가입을 통해 리워드 혜택을 즐기세요.
-                    </p>
-                  </div>
-                  <div class="rewards_info_top_logsign_btn">
-                    <div class="rewards_info_top_sign_up">회원가입</div>
-                    <div class="rewards_info_top_login">로그인</div>
-                  </div>
-                </div>
-                <hr />
-                <div class="rewards_info_down">
-                  <div class="rewards_info_down_txt">
-                    <p>
-                      회원가입 후, 스타벅스 e-Gift Card를
-                      <span class="txt_bold"
-                        >"나에게 선물하기"로 구매하시고, 편리하게
-                        등록하세요!</span
-                      >
-                    </p>
-
-                    <p>
-                      카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를
-                      하시면 무료 음료쿠폰을 드립니다!
-                    </p>
-                  </div>
-                  <div class="rewards_info_down_gift_btn">
-                    e-Gift Card 선물하기
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="location_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_05_230921.jpg"
-            />
-          </div>
-          <div class="favorite_pick">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_ecozensirencoldcup_230810.jpg"
-            />
-          </div>
-          <div class="magazine">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_06_230921.jpg"
-            />
+        </div>
+        <div class="usewebinfo">
+          <p>새로워진 스타벅스 웹사이트</p>
+          <span>이용안내</span>
+          <div class="btn_circle">
+            <i class="fa-solid fa-plus"></i>
           </div>
         </div>
       </div>
+      <div class="whatsnew_odd">
+        <div class="whatsnew_odd_backimg"></div>
+        <div class="whatsnew_odd_txt">
+          <p class="whatsnew_odd_first"><span>이벤트</span></p>
+          <span class="whatsnew_odd_last">
+            <p><span>다양하고 특별한 프로모션과 이벤트</span>를 통해</p>
+            <p>풍성한 혜택을 누리세요</p>
+          </span>
+          <div class="whatsnew_seemore">자세히 보기</div>
+        </div>
+      </div>
 
+      <div class="whatsnew_even">
+        <img
+          src="https://img.freepik.com/free-photo/crop-man-reading-book-near-window_23-2147779301.jpg"
+        />
+        <div class="whatsnew_even_txt">
+          <p class="whatsnew_even_first"><span>뉴스</span></p>
+          <span class="whatsnew_even_last">
+            <p><span>신제품 출시부터 다채로운 행사 소식</span>까지</p>
+            <p>새로운 소식을 알려드립니다.</p>
+          </span>
+          <div class="whatsnew_seemore">자세히 보기</div>
+        </div>
+      </div>
+
+      <div class="whatsnew_odd">
+        <img
+          src="https://blog.kakaocdn.net/dn/bsFv9T/btrhzrHbdyg/CAdXLV3lTHDnNmiubqFw4k/img.jpg"
+        />
+        <div class="whatsnew_odd_txt">
+          <p class="whatsnew_odd_first"><span>매장별 이벤트</span></p>
+          <span class="whatsnew_odd_last">
+            <p><span>신규 매장 오픈 이벤트 및 각 매장별 이벤트</span>를</p>
+            <p>지금 확인해 보세요.</p>
+          </span>
+          <div class="whatsnew_seemore">자세히 보기</div>
+        </div>
+      </div>
+
+      <div class="whatsnew_even">
+        <img
+          src="https://img.freepik.com/free-vector/2023-new-year-calendar-template-in-modern-style_1017-40110.jpg"
+        />
+        <div class="whatsnew_even_txt">
+          <p class="whatsnew_even_first"><span>월페이퍼 다운로드</span></p>
+          <span class="whatsnew_even_last">
+            <p>스타벅스 커피의 향기를 느낄 수 있는</p>
+            <p><span>월페이퍼</span>를 다운로드 받으세요.</p>
+          </span>
+          <div class="whatsnew_seemore">자세히 보기</div>
+        </div>
+      </div>
       <footer>
         <div class="category_company">
           <ul class="cc_ul">
@@ -550,7 +546,6 @@
         </div>
       </footer>
     </main>
-    <script src="./js/main.js"></script>
     <script
       src="https://kit.fontawesome.com/70782ef41a.js"
       crossorigin="anonymous"
