--- a/coffee.html
+++ b/coffee.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/components/nav.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/components/footer.css" />
     <title>스타벅스 만들어보기</title>
+    <link rel="stylesheet" href="./css/components/footer.css" />
+    <link rel="stylesheet" href="./css/components/nav.css" />
+    <link rel="stylesheet" href="./css/coffee.css" />
   </head>
   <body>
     <header>
       <div class="nav_bar">
-        <div class="main_logo">LOGO</div>
+        <a href="./index.html" class="main_logo">LOGO</a>
         <div class="nav_category">
           <div class="top_nav">
             <ul>
@@ -210,6 +210,7 @@
               </li>
               <!-- 메뉴 마지막 -->
 
+            
               <!-- 리워즈 시작 -->
               <li class="down_nav_category">
                 <h2 class="nb_ttl">
@@ -399,94 +400,93 @@
       </div>
     </header>
     <main>
-      <div class="scroll_backimg">
-        <div class="img_container">
-          <div class="season_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_01_230921.jpg"
-            />
+      <div class="coffee_mainttl">
+        <p>COFFEE</p>
+        <div>
+          <a href="./index.html"><i class="fa-solid fa-house"></i></a>
+          <i class="fa-solid fa-chevron-right"></i>
+          <a href="./coffee.html"><span>COFFEE</span></a>
+        </div>
+      </div>
+      <div>슬라이드?</div>
+      <div class="release_usewebinfo">
+        <div class="release">
+          보도자료
+          <div>반복되는 자료 움직이는걸로</div>
+          <div class="btn_circle">
+            <i class="fa-solid fa-plus"></i>
           </div>
-          <div class="announce_promotion">
-            <div class="announce">
-              공지사항
-              <div>반복되는 공지 움직이는걸로</div>
-              <div class="btn_circle">
-                <i class="fa-solid fa-plus"></i>
-              </div>
-            </div>
-            <div class="promotion">
-              프로모션
-              <div class="btn_circle_black">
-                <i class="fa-solid fa-chevron-down"></i>
-              </div>
-            </div>
-          </div>
-          <div class="rewards_gift_card">
-            <div class="rewards_logoinfo">
-              <div class="rewards_logo">로고</div>
-              <div class="rewards_info">
-                <div class="rewards_info_top">
-                  <div class="rewards_info_top_txt">
-                    <p>
-                      스타벅스만의 특별한 혜택,
-                      <span class="txt_bold">스타벅스 리워드</span>
-                    </p>
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이세요?</span>
-                      로그인을 통해 나만의 리워드를 확인해보세요
-                    </p>
-
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이 아니세요?</span>
-                      가입을 통해 리워드 혜택을 즐기세요.
-                    </p>
-                  </div>
-                  <div class="rewards_info_top_logsign_btn">
-                    <div class="rewards_info_top_sign_up">회원가입</div>
-                    <div class="rewards_info_top_login">로그인</div>
-                  </div>
-                </div>
-                <hr />
-                <div class="rewards_info_down">
-                  <div class="rewards_info_down_txt">
-                    <p>
-                      회원가입 후, 스타벅스 e-Gift Card를
-                      <span class="txt_bold"
-                        >"나에게 선물하기"로 구매하시고, 편리하게
-                        등록하세요!</span
-                      >
-                    </p>
-
-                    <p>
-                      카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를
-                      하시면 무료 음료쿠폰을 드립니다!
-                    </p>
-                  </div>
-                  <div class="rewards_info_down_gift_btn">
-                    e-Gift Card 선물하기
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="location_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_05_230921.jpg"
-            />
-          </div>
-          <div class="favorite_pick">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_ecozensirencoldcup_230810.jpg"
-            />
-          </div>
-          <div class="magazine">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_06_230921.jpg"
-            />
+        </div>
+        <div class="usewebinfo">
+          <p>새로워진 스타벅스 웹사이트</p>
+          <span>이용안내</span>
+          <div class="btn_circle">
+            <i class="fa-solid fa-plus"></i>
           </div>
         </div>
       </div>
+      <div class="coffee_odd">
+        <img
+          src="https://images.pexels.com/photos/4085266/pexels-photo-4085266.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+        />
+        <div class="coffee_odd_txt">
+          <p class="coffee_odd_first"><span>커피 이야기</span></p>
+          <p class="coffee_odd_second">한 잔의 완벽한 커피를 위한 스타벅스의 여정</p>
+          <span class="coffee_odd_last">
+            <p>커피 농장에서부터</p>
+            <p>당신의 취향에 꼭 맞춘 한 잔의 커피가 되기까지,</p>
+            <p>스타벅스의 커피 이야기를 만나보세요.</p>
+        </span>
+        </div>
+      </div>
+      <div class="coffee_even">
+        <img
+          src="https://img.freepik.com/premium-photo/sketch-of-a-building-with-the-word-hotel-on-the-bottom_664601-5986.jpg?w=2000"
+        />
+        <div class="coffee_even_txt">
+          <p class="coffee_even_first">스타벅스<span>리저브</span></p>
+          <p class="coffee_even_second">나의 취향이 머무는 곳</p>
+          <span class="coffee_even_last">
+            <p
+              >취향을 채우는 스페셜티 원두와 깊은 풍미를 더하는 추출 방식,</p
+            >
+            <p>커피향으로 가득 채워진 여유로운 공간까지.</p>
+            <p>모두 스타벅스 리저브에서 경험해 보세요.</p>
+        </span>
+        </div>
+      </div>
+      <div class="coffee_odd">
+            <img
+            src="https://img.freepik.com/free-photo/cup-of-black-coffee-isolated-generative-al_169016-28501.jpg"
+            />
+            <div class="coffee_odd_txt">
+              <p class="coffee_odd_first"><span>에스프레소</span>음료</p>
+              <p class="coffee_odd_second">스타벅스만의 특별한 에스프레소로 만들어진 음료</p>
+              <span class="coffee_odd_last">
+                <p>순수하고 강렬한 에스프레소 풍미의 도피오,</p>
+                <p>완벽하게 만들어진 부드러운 크림 블렌드의 라떼 등</p>
+                <p>에스프레소로 즐길 수 있는 음료들을 만나보세요.</p>
+              </span>
+            </div>
+       </div>
 
+        <div class="coffee_even">
+          <img
+            src="https://img.freepik.com/premium-photo/hand-drip-coffee-kit-barista-pouring-water-on-coffee-ground-with-filter-generative-ai_175086-2644.jpg"
+          />
+          <div class="coffee_even_txt">
+            <p class="coffee_even_first"><span>최상의 커피</span>를 즐기는 법</p>
+            <p class="coffee_even_second">여러 가지 추출 방법으로 만나는 최상의 커피</p>
+            <span class="coffee_even_last">
+              <p
+                >커피 프레스, 푸어 오버, 아이스 푸어 오버, 커피 브루어 등</p
+              >
+              <p>여러 가지 방법을 통해 다양한 풍미의 커피를</p>
+              <p>언재 어디서든 최상의 맛으로 즐겨보세요.</p>
+            </span>
+          </div>
+        </div>
+      </div>
       <footer>
         <div class="category_company">
           <ul class="cc_ul">
@@ -550,7 +550,6 @@
         </div>
       </footer>
     </main>
-    <script src="./js/main.js"></script>
     <script
       src="https://kit.fontawesome.com/70782ef41a.js"
       crossorigin="anonymous"
