--- a/menu.html
+++ b/menu.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/components/nav.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/components/footer.css" />
     <title>스타벅스 만들어보기</title>
+    <link rel="stylesheet" href="./css/components/nav.css" />
+    <link rel="stylesheet" href="./css/components/footer.css" />
+    <link rel="stylesheet" href="./css/menu.css" />
   </head>
   <body>
     <header>
       <div class="nav_bar">
-        <div class="main_logo">LOGO</div>
+        <a href="./index.html" class="main_logo">LOGO</a>
         <div class="nav_category">
           <div class="top_nav">
             <ul>
@@ -399,91 +399,104 @@
       </div>
     </header>
     <main>
-      <div class="scroll_backimg">
-        <div class="img_container">
-          <div class="season_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_01_230921.jpg"
-            />
+      <div class="menu_mainttl">
+        <p>MENU</p>
+        <div>
+          <a href="./index.html"><i class="fa-solid fa-house"></i></a>
+          <i class="fa-solid fa-chevron-right"></i>
+          <a href="./coffee.html"><span>MENU</span></a>
+        </div>
+      </div>
+      <div>신제품 소개</div>
+      <div class="release_usewebinfo">
+        <div class="release">
+          보도자료
+          <div>반복되는 자료 움직이는걸로</div>
+          <div class="btn_circle">
+            <i class="fa-solid fa-plus"></i>
           </div>
-          <div class="announce_promotion">
-            <div class="announce">
-              공지사항
-              <div>반복되는 공지 움직이는걸로</div>
-              <div class="btn_circle">
-                <i class="fa-solid fa-plus"></i>
-              </div>
-            </div>
-            <div class="promotion">
-              프로모션
-              <div class="btn_circle_black">
-                <i class="fa-solid fa-chevron-down"></i>
-              </div>
-            </div>
+        </div>
+        <div class="usewebinfo">
+          <p>새로워진 스타벅스 웹사이트</p>
+          <span>이용안내</span>
+          <div class="btn_circle">
+            <i class="fa-solid fa-plus"></i>
           </div>
-          <div class="rewards_gift_card">
-            <div class="rewards_logoinfo">
-              <div class="rewards_logo">로고</div>
-              <div class="rewards_info">
-                <div class="rewards_info_top">
-                  <div class="rewards_info_top_txt">
-                    <p>
-                      스타벅스만의 특별한 혜택,
-                      <span class="txt_bold">스타벅스 리워드</span>
-                    </p>
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이세요?</span>
-                      로그인을 통해 나만의 리워드를 확인해보세요
-                    </p>
+        </div>
+      </div>
+      <div class="menu_odd">
+        <img
+          src="https://e1.pxfuel.com/desktop-wallpaper/396/611/desktop-wallpaper-latte-coffee-art.jpg"
+        />
+        <div class="menu_odd_txt">
+          <p class="menu_odd_first"><span>음료</span></p>
+          <p class="menu_odd_second">
+            바리스타의 숙련된 기술로 취향까지 담은 음료를 경험해 보세요.
+          </p>
+          <span class="menu_odd_last">
+            <p>
+              한 잔의 음료에 원하시는 취향과 스타벅스 경험까지 모두 담았습니다.
+            </p>
+          </span>
+        </div>
+      </div>
 
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이 아니세요?</span>
-                      가입을 통해 리워드 혜택을 즐기세요.
-                    </p>
-                  </div>
-                  <div class="rewards_info_top_logsign_btn">
-                    <div class="rewards_info_top_sign_up">회원가입</div>
-                    <div class="rewards_info_top_login">로그인</div>
-                  </div>
-                </div>
-                <hr />
-                <div class="rewards_info_down">
-                  <div class="rewards_info_down_txt">
-                    <p>
-                      회원가입 후, 스타벅스 e-Gift Card를
-                      <span class="txt_bold"
-                        >"나에게 선물하기"로 구매하시고, 편리하게
-                        등록하세요!</span
-                      >
-                    </p>
+      <div class="menu_even">
+        <img
+          src="https://img.freepik.com/free-photo/delicious-muffins-with-chocolate-just-backed_23-2148297901.jpg?w=2000"
+        />
+        <div class="menu_even_txt">
+          <p class="menu_even_first"><span>푸드</span></p>
+          <p class="menu_even_second">
+            신선한 식재료로 만든 다양한 푸드를 소개합니다.
+          </p>
+          <span class="menu_even_last">
+            <p>간편하면서 영양 가득한 스타벅스 푸드가 당신의 완벽한 하루를</p>
+            <p>채워 드립니다.</p>
+          </span>
+        </div>
+      </div>
 
-                    <p>
-                      카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를
-                      하시면 무료 음료쿠폰을 드립니다!
-                    </p>
-                  </div>
-                  <div class="rewards_info_down_gift_btn">
-                    e-Gift Card 선물하기
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="location_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_05_230921.jpg"
-            />
-          </div>
-          <div class="favorite_pick">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_ecozensirencoldcup_230810.jpg"
-            />
-          </div>
-          <div class="magazine">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_06_230921.jpg"
-            />
-          </div>
+      <div class="menu_odd">
+        <img
+          src="https://img.freepik.com/free-photo/assortment-of-different-glass-tumblers_23-2149029223.jpg?w=826&t=st=1696691148~exp=1696691748~hmac=2a76749a06fdc7802871eaa0c38b2dbcc94d5cff30da5dc97135056a2ea5a67f"
+        />
+        <div class="menu_odd_txt">
+          <p class="menu_odd_first"><span>상품</span></p>
+          <p class="menu_odd_second">
+            시즌마다 다양한 모습으로 즐거움을 주는 스타벅스 상품들을 만나보세요.
+          </p>
+          <span class="menu_odd_last">
+            <p>언제나 새로운 상품으로 당신에게 특별한 선물이 됩니다.</p>
+          </span>
+        </div>
+      </div>
+
+      <div class="menu_even">
+        <img
+          src="https://img.freepik.com/premium-photo/balloons-on-a-black-table-with-a-blank-card_899894-3980.jpg"
+        />
+        <div class="menu_even_txt">
+          <p class="menu_even_first"><span>카드</span></p>
+          <p class="menu_even_second">
+            따뜻한 커피 한 잔으로 마음을 전해보세요.
+          </p>
+          <span class="menu_even_last">
+            <p>스타벅스 카드로 모두가 행복해지는 순간을 느낄 수 있습니다.</p>
+          </span>
+        </div>
+      </div>
+
+      <div class="menu_odd">
+        <img
+          src="https://png.pngtree.com/thumb_back/fw800/background/20230425/pngtree-colorful-drinks-are-lined-on-a-table-image_2504207.jpg"
+        />
+        <div class="menu_odd_txt">
+          <p class="menu_odd_first"><span>메뉴 이야기</span></p>
+          <p class="menu_odd_second">스타벅스에서 만나는 다양한 음료 이야기</p>
+          <span class="menu_odd_last">
+            <p>스타벅스에서만 경험할 수 있는 특별한 메뉴를 소개합니다.</p>
+          </span>
         </div>
       </div>
 
@@ -550,7 +563,6 @@
         </div>
       </footer>
     </main>
-    <script src="./js/main.js"></script>
     <script
       src="https://kit.fontawesome.com/70782ef41a.js"
       crossorigin="anonymous"
