--- a/rewards.html
+++ b/rewards.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/components/nav.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/components/footer.css" />
     <title>스타벅스 만들어보기</title>
+    <link rel="stylesheet" href="./css/components/nav.css" />
+    <link rel="stylesheet" href="./css/components/footer.css" />
+    <link rel="stylesheet" href="./css/rewards.css" />
   </head>
   <body>
     <header>
       <div class="nav_bar">
-        <div class="main_logo">LOGO</div>
+        <a href="./index.html" class="main_logo">LOGO</a>
         <div class="nav_category">
           <div class="top_nav">
             <ul>
@@ -399,94 +399,92 @@
       </div>
     </header>
     <main>
-      <div class="scroll_backimg">
-        <div class="img_container">
-          <div class="season_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_01_230921.jpg"
-            />
+      <div class="rewards_mainttl">
+        <p>STARBUCKS REWARDS</p>
+        <div>
+          <a href="./index.html"><i class="fa-solid fa-house"></i></a>
+          <i class="fa-solid fa-chevron-right"></i>
+          <a href="./coffee.html"><span>Starbucks Rewards</span></a>
+        </div>
+      </div>
+      <div class="rewards_even_title">
+        <img
+          src="https://img.freepik.com/premium-photo/cup-of-coffee-and-stars-on-a-dark-blue-background-concept-of-the-starry-sky-and-coffee_164357-1405.jpg"
+        />
+        <div class="rewards_even_txt">
+          <p class="rewards_even_first">
+            스타벅스만의 <span>특별한 혜택,</span>
+            <p><span>스타벅스 리워드</span>를 만나보세요.</p>
+          </p>
+          <span class="rewards_even_last">
+            <p>
+              스타벅스를 사랑해주시는 고객님을 위해 별⭐을 적립하여
+            </p>
+            <p>혜택으로 돌려드리는 특별한 리워드 서비스입니다.</p>
+          </span>
+          <div class="rewards_even_btn">
+            <div>스타벅스 리워드 소개</div>
+            <div>My 리워드 확인</div>
           </div>
-          <div class="announce_promotion">
-            <div class="announce">
-              공지사항
-              <div>반복되는 공지 움직이는걸로</div>
-              <div class="btn_circle">
-                <i class="fa-solid fa-plus"></i>
-              </div>
-            </div>
-            <div class="promotion">
-              프로모션
-              <div class="btn_circle_black">
-                <i class="fa-solid fa-chevron-down"></i>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="release_usewebinfo">
+        <div class="release">
+          보도자료
+          <div>반복되는 자료 움직이는걸로</div>
+          <div class="btn_circle">
+            <i class="fa-solid fa-plus"></i>
           </div>
-          <div class="rewards_gift_card">
-            <div class="rewards_logoinfo">
-              <div class="rewards_logo">로고</div>
-              <div class="rewards_info">
-                <div class="rewards_info_top">
-                  <div class="rewards_info_top_txt">
-                    <p>
-                      스타벅스만의 특별한 혜택,
-                      <span class="txt_bold">스타벅스 리워드</span>
-                    </p>
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이세요?</span>
-                      로그인을 통해 나만의 리워드를 확인해보세요
-                    </p>
+        </div>
+        <div class="usewebinfo">
+          <p>새로워진 스타벅스 웹사이트</p>
+          <span>이용안내</span>
+          <div class="btn_circle">
+            <i class="fa-solid fa-plus"></i>
+          </div>
+        </div>
+      </div>
+      <div class="rewards_odd">
+        <img
+          src="https://img.freepik.com/free-photo/delicious-muffins-with-chocolate-just-backed_23-2148297901.jpg?w=2000"
+        />
+        <div class="rewards_odd_txt">
+          <p class="rewards_odd_first">스타벅스만의 특별함,
+            <p><span>스타벅스 카드</span>를 <span>소개</span>합니다.</p>
+          </p>
 
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이 아니세요?</span>
-                      가입을 통해 리워드 혜택을 즐기세요.
-                    </p>
-                  </div>
-                  <div class="rewards_info_top_logsign_btn">
-                    <div class="rewards_info_top_sign_up">회원가입</div>
-                    <div class="rewards_info_top_login">로그인</div>
-                  </div>
-                </div>
-                <hr />
-                <div class="rewards_info_down">
-                  <div class="rewards_info_down_txt">
-                    <p>
-                      회원가입 후, 스타벅스 e-Gift Card를
-                      <span class="txt_bold"
-                        >"나에게 선물하기"로 구매하시고, 편리하게
-                        등록하세요!</span
-                      >
-                    </p>
-
-                    <p>
-                      카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를
-                      하시면 무료 음료쿠폰을 드립니다!
-                    </p>
-                  </div>
-                  <div class="rewards_info_down_gift_btn">
-                    e-Gift Card 선물하기
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="location_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_05_230921.jpg"
-            />
-          </div>
-          <div class="favorite_pick">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_ecozensirencoldcup_230810.jpg"
-            />
-          </div>
-          <div class="magazine">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_06_230921.jpg"
-            />
+          <span class="rewards_odd_last">
+            <p >스타벅스 카드는 기본적인 Free Extra 혜택을 드리며,</p>
+            <p>카드 고객 대상으로 다양한 이벤트를 지속적으로 진행하고 있습니다.</p>
+          </span>
+          <div class="rewards_odd_btn">
+            <div>스타벅스 카드 소개</div>
+            <div>등록 및 조회</div>
+            <div>충전 및 이용안내</div>
+            <div>My 스타벅스 카드 확인</div>
           </div>
         </div>
       </div>
 
+      <div class="rewards_even">
+        <img
+          src="https://img.freepik.com/free-photo/assortment-of-different-glass-tumblers_23-2149029223.jpg?w=826&t=st=1696691148~exp=1696691748~hmac=2a76749a06fdc7802871eaa0c38b2dbcc94d5cff30da5dc97135056a2ea5a67f"
+        />
+        <div class="rewards_even_txt">
+          <p class="rewards_even_first">쉽고 빠르게 스타벅스 카드를<span>구매하는 방법,</span>
+          <p><span>스타벅스 e-Gift Card</span>를 이용해보세요.</p>
+          </p>
+          <span class="rewards_even_last">
+            <p>매장 방문 없이 웹사이트와 모바일 앱에서</p>
+            <p>스타벅스 e-Gift Card를 손쉽게 구매하여 사용해보세요.</p>
+          </span>
+          <div class="rewards_even_btn">
+            <div>스타벅스 e-Gift Card 소개</div>
+            <div>이용안내</div>
+            <div>선물하기</div>
+          </div>
+        </div>
+      </div>
       <footer>
         <div class="category_company">
           <ul class="cc_ul">
@@ -550,7 +548,6 @@
         </div>
       </footer>
     </main>
-    <script src="./js/main.js"></script>
     <script
       src="https://kit.fontawesome.com/70782ef41a.js"
       crossorigin="anonymous"
