--- a/signup.html
+++ b/signup.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/components/nav.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/components/footer.css" />
     <title>스타벅스 만들어보기</title>
+    <link rel="stylesheet" href="./css/components/nav.css" />
+    <link rel="stylesheet" href="./css/components/footer.css" />
   </head>
   <body>
     <header>
       <div class="nav_bar">
-        <div class="main_logo">LOGO</div>
+        <a href="./index.html" class="main_logo">LOGO</a>
         <div class="nav_category">
           <div class="top_nav">
             <ul>
@@ -399,94 +398,6 @@
       </div>
     </header>
     <main>
-      <div class="scroll_backimg">
-        <div class="img_container">
-          <div class="season_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_01_230921.jpg"
-            />
-          </div>
-          <div class="announce_promotion">
-            <div class="announce">
-              공지사항
-              <div>반복되는 공지 움직이는걸로</div>
-              <div class="btn_circle">
-                <i class="fa-solid fa-plus"></i>
-              </div>
-            </div>
-            <div class="promotion">
-              프로모션
-              <div class="btn_circle_black">
-                <i class="fa-solid fa-chevron-down"></i>
-              </div>
-            </div>
-          </div>
-          <div class="rewards_gift_card">
-            <div class="rewards_logoinfo">
-              <div class="rewards_logo">로고</div>
-              <div class="rewards_info">
-                <div class="rewards_info_top">
-                  <div class="rewards_info_top_txt">
-                    <p>
-                      스타벅스만의 특별한 혜택,
-                      <span class="txt_bold">스타벅스 리워드</span>
-                    </p>
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이세요?</span>
-                      로그인을 통해 나만의 리워드를 확인해보세요
-                    </p>
-
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이 아니세요?</span>
-                      가입을 통해 리워드 혜택을 즐기세요.
-                    </p>
-                  </div>
-                  <div class="rewards_info_top_logsign_btn">
-                    <div class="rewards_info_top_sign_up">회원가입</div>
-                    <div class="rewards_info_top_login">로그인</div>
-                  </div>
-                </div>
-                <hr />
-                <div class="rewards_info_down">
-                  <div class="rewards_info_down_txt">
-                    <p>
-                      회원가입 후, 스타벅스 e-Gift Card를
-                      <span class="txt_bold"
-                        >"나에게 선물하기"로 구매하시고, 편리하게
-                        등록하세요!</span
-                      >
-                    </p>
-
-                    <p>
-                      카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를
-                      하시면 무료 음료쿠폰을 드립니다!
-                    </p>
-                  </div>
-                  <div class="rewards_info_down_gift_btn">
-                    e-Gift Card 선물하기
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="location_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_05_230921.jpg"
-            />
-          </div>
-          <div class="favorite_pick">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_ecozensirencoldcup_230810.jpg"
-            />
-          </div>
-          <div class="magazine">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_06_230921.jpg"
-            />
-          </div>
-        </div>
-      </div>
-
       <footer>
         <div class="category_company">
           <ul class="cc_ul">
@@ -550,10 +461,5 @@
         </div>
       </footer>
     </main>
-    <script src="./js/main.js"></script>
-    <script
-      src="https://kit.fontawesome.com/70782ef41a.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
