--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
           <div class="top_nav">
             <ul>
               <li>
-                <a href="#">회원가입</a>
+                <a href="./login.html">회원가입</a>
               </li>
               <li><a href="#">나의 스타벅스</a></li>
               <li><a href="#">고객서비스 & 아이디어</a></li>
