프로모션 슬라이더 준비

--- a/index.html
+++ b/index.html
@@ -406,21 +406,25 @@
               src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_01_230921.jpg"
             />
           </div>
-          <div class="announce_promotion">
-            <div class="announce">
-              공지사항
-              <div>반복되는 공지 움직이는걸로</div>
-              <div class="btn_circle">
-                <i class="fa-solid fa-plus"></i>
+          <div class="announce_promotion_wrap">
+            <div class="announce_promotion">
+              <div class="announce">
+                공지사항
+                <div>반복되는 공지 움직이는걸로</div>
+                <div class="btn_circle">
+                  <i class="fa-solid fa-plus"></i>
+                </div>
+              </div>
+              <div class="promotion">
+                프로모션
+                <div class="btn_circle_black">
+                  <i class="fa-solid fa-chevron-down"></i>
+                </div>
               </div>
             </div>
-            <div class="promotion">
-              프로모션
-              <div class="btn_circle_black">
-                <i class="fa-solid fa-chevron-down"></i>
-              </div>
-            </div>
+            <div class="promotion_dropdown">1</div>
           </div>
+
           <div class="rewards_gift_card">
             <div class="rewards_logoinfo">
               <div class="rewards_logo">로고</div>
@@ -442,8 +446,12 @@
                     </p>
                   </div>
                   <div class="rewards_info_top_logsign_btn">
-                    <div class="rewards_info_top_sign_up">회원가입</div>
-                    <div class="rewards_info_top_login">로그인</div>
+                    <div class="rewards_info_top_sign_up">
+                      <a href="./signin.html">회원가입</a>
+                    </div>
+                    <div class="rewards_info_top_login">
+                      <a href="./login.html">로그인</a>
+                    </div>
                   </div>
                 </div>
                 <hr />
