프로모션 슬라이더 만들기

--- a/index.html
+++ b/index.html
@@ -415,14 +415,41 @@
                   <i class="fa-solid fa-plus"></i>
                 </div>
               </div>
-              <div class="promotion">
+              <div class="promotion" id="hide">
                 프로모션
                 <div class="btn_circle_black">
                   <i class="fa-solid fa-chevron-down"></i>
                 </div>
               </div>
             </div>
-            <div class="promotion_dropdown">1</div>
+            <div class="promotion_dropdown">
+              <div class="pd_slider_wrap">
+                <ul class="pd_slider">
+                  <li class="pd_slider_li">
+                    <img src="https://img.freepik.com/premium-photo/fruit-in-juice-splashes-multiple-fruits_343960-7688.jpg">
+                    <div class="pd_slider_ttl"> 여름 시즌 과일 음료 </div>
+                    <p> 트로피칼 음료가 새롭게 출시 되었습니다.</p>
+                    <div class="pd_slider_seemore"> 자세히 보기 </div>
+                  </li>
+                  <li class="pd_slider_li">
+                    <img src="https://img.freepik.com/premium-photo/credit-cards-and-coffee-beans-are-on-the-desk-top-view_10221-9321.jpg">
+                    <div class="pd_slider_ttl"> 리워즈 카드 출시 </div>
+                    <p> 커피 먹고 포인트 쌓고 일석이조를 위한 카드.</p>
+                    <div class="pd_slider_seemore"> 자세히 보기 </div>
+                  </li>
+                  <li class="pd_slider_li">
+                    <img src="https://img.freepik.com/premium-photo/healthy-blueberry-smoothie-on-rustic-wooden-background-selectiv_149084-335.jpg">
+                    <div class="pd_slider_ttl"> 블루베리 음료 재출시 </div>
+                    <p> 재출시 원픽! 블루베리 음료가 다시 출시되었습니다.</p>
+                    <div class="pd_slider_seemore"> 자세히 보기 </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="pd_arrow">
+                <a href="" class="prev"><i class="fa-solid fa-chevron-left"></i></a>
+                <a href="" class="next"><i class="fa-solid fa-chevron-right"></i></a>
+              </div>
+            </div>
           </div>
 
           <div class="rewards_gift_card">
@@ -482,10 +509,6 @@
               src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_05_230921.jpg"
             />
           </div>
-          <div class="favorite_pick">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_ecozensirencoldcup_230810.jpg"
-            />
           </div>
           <div class="magazine">
             <img
