프로모션 js 추가

--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@
                 </div>
               </div>
             </div>
-            <div class="promotion_dropdown">
+            <div class="promotion_dropdown" >
               <div class="pd_slider_wrap">
-                <ul class="pd_slider">
+                <ul class="pd_slider" id="slider">
                   <li class="pd_slider_li">
                     <img src="https://img.freepik.com/premium-photo/fruit-in-juice-splashes-multiple-fruits_343960-7688.jpg">
                     <div class="pd_slider_ttl"> 여름 시즌 과일 음료 </div>
