슬라이드 아이콘 수정, 커피페이지 슬라이더 추가

--- a/index.html
+++ b/index.html
@@ -415,14 +415,14 @@
                   <i class="fa-solid fa-plus"></i>
                 </div>
               </div>
-              <div class="promotion" id="hide">
+              <div class="promotion">
                 프로모션
                 <div class="btn_circle_black">
-                  <i class="fa-solid fa-chevron-down"></i>
+                  <i class="fa-solid fa-chevron-up"></i>
                 </div>
               </div>
             </div>
-            <div class="promotion_dropdown" >
+            <div class="promotion_dropdown" id="dropdown_hc">
               <div class="pd_slider_wrap">
                 <ul class="pd_slider" id="slider">
                   <li class="pd_slider_li">
