--- a/index.html
+++ b/index.html
@@ -210,98 +210,6 @@
               </li>
               <!-- 메뉴 마지막 -->
 
-              <!-- 리워즈 시작 -->
-              <li class="down_nav_category">
-                <h2 class="nb_ttl">
-                  <a href="./rewards.html">REWARDS</a>
-                </h2>
-                <div class="nb_sub">
-                  <div class="nb_sub_inner">
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">리워즈</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈 이야기기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈란</a>
-                      </li>
-                      <li>
-                        <a href="#">리워즈쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">리워즈</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈 이야기기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈란</a>
-                      </li>
-                      <li>
-                        <a href="#">리워즈쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">리워즈</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈 이야기기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈란</a>
-                      </li>
-                      <li>
-                        <a href="#">리워즈쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">리워즈</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈 이야기기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈란</a>
-                      </li>
-                      <li>
-                        <a href="#">리워즈쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">리워즈</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈 이야기기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">리워즈란</a>
-                      </li>
-                      <li>
-                        <a href="#">리워즈쓰</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </li>
-              <!-- 리워즈 마지막 -->
-
               <!-- 신상품 시작 -->
               <li class="down_nav_category">
                 <h2 class="nb_ttl">
@@ -415,100 +323,112 @@
                   <i class="fa-solid fa-plus"></i>
                 </div>
               </div>
-              <div class="promotion">
+              <div class="promotion" id="hide">
                 프로모션
                 <div class="btn_circle_black">
                   <i class="fa-solid fa-chevron-up"></i>
                 </div>
               </div>
             </div>
+
             <div class="promotion_dropdown" id="dropdown_hc">
-              <div class="pd_slider_wrap">
-                <ul class="pd_slider" id="slider">
-                  <li class="pd_slider_li">
-                    <img src="https://img.freepik.com/premium-photo/fruit-in-juice-splashes-multiple-fruits_343960-7688.jpg">
-                    <div class="pd_slider_ttl"> 여름 시즌 과일 음료 </div>
-                    <p> 트로피칼 음료가 새롭게 출시 되었습니다.</p>
-                    <div class="pd_slider_seemore"> 자세히 보기 </div>
-                  </li>
-                  <li class="pd_slider_li">
-                    <img src="https://img.freepik.com/premium-photo/credit-cards-and-coffee-beans-are-on-the-desk-top-view_10221-9321.jpg">
-                    <div class="pd_slider_ttl"> 리워즈 카드 출시 </div>
-                    <p> 커피 먹고 포인트 쌓고 일석이조를 위한 카드.</p>
-                    <div class="pd_slider_seemore"> 자세히 보기 </div>
-                  </li>
-                  <li class="pd_slider_li">
-                    <img src="https://img.freepik.com/premium-photo/healthy-blueberry-smoothie-on-rustic-wooden-background-selectiv_149084-335.jpg">
-                    <div class="pd_slider_ttl"> 블루베리 음료 재출시 </div>
-                    <p> 재출시 원픽! 블루베리 음료가 다시 출시되었습니다.</p>
-                    <div class="pd_slider_seemore"> 자세히 보기 </div>
-                  </li>
-                </ul>
-              </div>
-              <div class="pd_arrow">
-                <a href="" class="prev"><i class="fa-solid fa-chevron-left"></i></a>
-                <a href="" class="next"><i class="fa-solid fa-chevron-right"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="rewards_gift_card">
-            <div class="rewards_logoinfo">
-              <div class="rewards_logo">로고</div>
-              <div class="rewards_info">
-                <div class="rewards_info_top">
-                  <div class="rewards_info_top_txt">
-                    <p>
-                      스타벅스만의 특별한 혜택,
-                      <span class="txt_bold">스타벅스 리워드</span>
-                    </p>
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이세요?</span>
-                      로그인을 통해 나만의 리워드를 확인해보세요
-                    </p>
-
-                    <p>
-                      <span class="txt_bold">스타벅스 회원이 아니세요?</span>
-                      가입을 통해 리워드 혜택을 즐기세요.
-                    </p>
-                  </div>
-                  <div class="rewards_info_top_logsign_btn">
-                    <div class="rewards_info_top_sign_up">
-                      <a href="./signin.html">회원가입</a>
-                    </div>
-                    <div class="rewards_info_top_login">
-                      <a href="./login.html">로그인</a>
-                    </div>
-                  </div>
+              <div class="promotion_dropdown">
+                <div class="pd_slider_wrap">
+                  <ul class="pd_slider" id="slider">
+                    <li class="pd_slider_li">
+                      <img
+                        src="https://img.freepik.com/premium-photo/fruit-in-juice-splashes-multiple-fruits_343960-7688.jpg"
+                      />
+                      <div class="pd_slider_ttl">여름 시즌 과일 음료</div>
+                      <p>트로피칼 음료가 새롭게 출시 되었습니다.</p>
+                      <div class="pd_slider_seemore">자세히 보기</div>
+                    </li>
+                    <li class="pd_slider_li">
+                      <img
+                        src="https://img.freepik.com/premium-photo/credit-cards-and-coffee-beans-are-on-the-desk-top-view_10221-9321.jpg"
+                      />
+                      <div class="pd_slider_ttl">리워즈 카드 출시</div>
+                      <p>커피 먹고 포인트 쌓고 일석이조를 위한 카드.</p>
+                      <div class="pd_slider_seemore">자세히 보기</div>
+                    </li>
+                    <li class="pd_slider_li">
+                      <img
+                        src="https://img.freepik.com/premium-photo/healthy-blueberry-smoothie-on-rustic-wooden-background-selectiv_149084-335.jpg"
+                      />
+                      <div class="pd_slider_ttl">블루베리 음료 재출시</div>
+                      <p>재출시 원픽! 블루베리 음료가 다시 출시되었습니다.</p>
+                      <div class="pd_slider_seemore">자세히 보기</div>
+                    </li>
+                  </ul>
                 </div>
-                <hr />
-                <div class="rewards_info_down">
-                  <div class="rewards_info_down_txt">
-                    <p>
-                      회원가입 후, 스타벅스 e-Gift Card를
-                      <span class="txt_bold"
-                        >"나에게 선물하기"로 구매하시고, 편리하게
-                        등록하세요!</span
-                      >
-                    </p>
-
-                    <p>
-                      카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를
-                      하시면 무료 음료쿠폰을 드립니다!
-                    </p>
-                  </div>
-                  <div class="rewards_info_down_gift_btn">
-                    e-Gift Card 선물하기
-                  </div>
+                <div class="pd_arrow">
+                  <a href="" class="prev"
+                    ><i class="fa-solid fa-chevron-left"></i
+                  ></a>
+                  <a href="" class="next"
+                    ><i class="fa-solid fa-chevron-right"></i
+                  ></a>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="location_menu">
-            <img
-              src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_05_230921.jpg"
-            />
-          </div>
+
+            <div class="rewards_gift_card">
+              <div class="rewards_logoinfo">
+                <div class="rewards_logo">로고</div>
+                <div class="rewards_info">
+                  <div class="rewards_info_top">
+                    <div class="rewards_info_top_txt">
+                      <p>
+                        스타벅스만의 특별한 혜택,
+                        <span class="txt_bold">스타벅스 리워드</span>
+                      </p>
+                      <p>
+                        <span class="txt_bold">스타벅스 회원이세요?</span>
+                        로그인을 통해 나만의 리워드를 확인해보세요
+                      </p>
+
+                      <p>
+                        <span class="txt_bold">스타벅스 회원이 아니세요?</span>
+                        가입을 통해 리워드 혜택을 즐기세요.
+                      </p>
+                    </div>
+                    <div class="rewards_info_top_logsign_btn">
+                      <div class="rewards_info_top_sign_up">
+                        <a href="./signin.html">회원가입</a>
+                      </div>
+                      <div class="rewards_info_top_login">
+                        <a href="./login.html">로그인</a>
+                      </div>
+                    </div>
+                  </div>
+                  <hr />
+                  <div class="rewards_info_down">
+                    <div class="rewards_info_down_txt">
+                      <p>
+                        회원가입 후, 스타벅스 e-Gift Card를
+                        <span class="txt_bold"
+                          >"나에게 선물하기"로 구매하시고, 편리하게
+                          등록하세요!</span
+                        >
+                      </p>
+
+                      <p>
+                        카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫
+                        구매를 하시면 무료 음료쿠폰을 드립니다!
+                      </p>
+                    </div>
+                    <div class="rewards_info_down_gift_btn">
+                      e-Gift Card 선물하기
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="location_menu">
+              <img
+                src="https://image.istarbucks.co.kr/img/event/2023/wn_autumn2_05_230921.jpg"
+              />
+            </div>
           </div>
           <div class="magazine">
             <img
