--- a/html/signin.html
+++ b/html/signin.html
@@ -24,285 +24,133 @@
               <li><a href="#">매장찾기</a></li>
             </ul>
           </div>
-          <div class="down_nav">
-            <ul>
-              <!--커피 시작 -->
-              <li class="down_nav_category">
-                <h2 class="nb_ttl">
-                  <a href="./coffee.html">COFFEE</a>
-                </h2>
-                <div class="nb_sub">
-                  <div class="nb_sub_inner">
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">커피</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피 이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피란</a>
-                      </li>
-                      <li>
-                        <a href="#">커피쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">커피</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피 이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피란</a>
-                      </li>
-                      <li>
-                        <a href="#">커피쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">커피</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피 이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피란</a>
-                      </li>
-                      <li>
-                        <a href="#">커피쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">커피</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피 이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피란</a>
-                      </li>
-                      <li>
-                        <a href="#">커피쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">커피</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피 이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">커피란</a>
-                      </li>
-                      <li>
-                        <a href="#">커피쓰</a>
-                      </li>
-                    </ul>
-                  </div>
+          <ul class="drop_nav">
+            <li>
+              <a href="./coffee.html">Coffee</a>
+              <div>
+                <div class="nav-column">
+                  <h3 class="orange">Home</h3>
+                  <ul>
+                    <li><a href="#">Pampers Diapers</a></li>
+                    <li><a href="#">Huggies Diapers</a></li>
+                    <li><a href="#">Seventh Generation</a></li>
+                    <li><a href="#">Diapers</a></li>
+                    <li><a href="#">Derbies</a></li>
+                  </ul>
                 </div>
-              </li>
-              <!-- 커피 마지막 -->
 
-              <!-- 메뉴 시작 -->
-              <li class="down_nav_category">
-                <h2 class="nb_ttl">
-                  <a href="./menu.html">MENU</a>
-                </h2>
-                <div class="nb_sub">
-                  <div class="nb_sub_inner">
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">메뉴</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴란</a>
-                      </li>
-                      <li>
-                        <a href="#">메뉴쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">메뉴</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴란</a>
-                      </li>
-                      <li>
-                        <a href="#">메뉴쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">메뉴</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴란</a>
-                      </li>
-                      <li>
-                        <a href="#">메뉴쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">메뉴</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴란</a>
-                      </li>
-                      <li>
-                        <a href="#">메뉴쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">메뉴</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴 이야기</a>
-                      </li>
-
-                      <li>
-                        <a href="#">메뉴란</a>
-                      </li>
-                      <li>
-                        <a href="#">메뉴쓰</a>
-                      </li>
-                    </ul>
-                  </div>
+                <div class="nav-column">
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
                 </div>
-              </li>
-              <!-- 메뉴 마지막 -->
-
-              <!-- 신상품 시작 -->
-              <li class="down_nav_category">
-                <h2 class="nb_ttl">
-                  <a href="./whatsnew.html">WHAT'S NEW</a>
-                </h2>
-                <div class="nb_sub">
-                  <div class="nb_sub_inner">
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품란</a>
-                      </li>
-                      <li>
-                        <a href="#">신상품쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품란</a>
-                      </li>
-                      <li>
-                        <a href="#">신상품쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품란</a>
-                      </li>
-                      <li>
-                        <a href="#">신상품쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품란</a>
-                      </li>
-                      <li>
-                        <a href="#">신상품쓰</a>
-                      </li>
-                    </ul>
-                    <ul>
-                      <li class="nb_sub_ttl">
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품</a>
-                      </li>
-
-                      <li>
-                        <a href="#">신상품란</a>
-                      </li>
-                      <li>
-                        <a href="#">신상품쓰</a>
-                      </li>
-                    </ul>
-                  </div>
+                <div class="nav-column">
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
                 </div>
-              </li>
-              <!-- 신상품 마지막 -->
-            </ul>
-          </div>
+                <div class="nav-column">
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <a href="./menu.html">Menu</a>
+              <div>
+                <div class="nav-column">
+                  <h3 class="orange">Home</h3>
+                  <ul>
+                    <li><a href="#">Pampers Diapers</a></li>
+                    <li><a href="#">Huggies Diapers</a></li>
+                    <li><a href="#">Seventh Generation</a></li>
+                    <li><a href="#">Diapers</a></li>
+                    <li><a href="#">Derbies</a></li>
+                  </ul>
+                </div>
+
+                <div class="nav-column">
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
+
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
+                </div>
+                <div class="nav-column">
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li>
+              <a href="./whatsnew.html">What's New</a>
+              <div>
+                <div class="nav-column">
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Pampers Diapers</a></li>
+                    <li><a href="#">Huggies Diapers</a></li>
+                    <li><a href="#">Seventh Generation</a></li>
+                    <li><a href="#">Diapers</a></li>
+                    <li><a href="#">Derbies</a></li>
+                  </ul>
+                </div>
+
+                <div class="nav-column">
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
+
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
+                </div>
+                <div class="nav-column">
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
+
+                  <h3>Home</h3>
+                  <ul>
+                    <li><a href="#">Driving shoes</a></li>
+                    <li><a href="#">Espadrilles</a></li>
+                    <li><a href="#">Loafers</a></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
